# magic-automator

./: LICENSE  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml
src/magic_automator/: __init__.py
src/magic_automator/android/: __init__.py
src/magic_automator/android/internal/: aoa_hid.py  humanize.py  sendevent.py
src/magic_automator/android/internal/llm/: plan_b.py  utils.py
src/magic_automator/android/llm/: __init__.py
src/magic_automator/android/llm/plan_b/: __init__.py
